[gd_scene load_steps=2 format=3 uid="uid://ending_summary_ui_001"]

[ext_resource type="Script" path="res://scripts/ending_summary_ui.gd" id="1_ending_summary_ui"]

[node name="EndingSummaryUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_ending_summary_ui")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1100.0
offset_top = -750.0
offset_right = 1100.0
offset_bottom = 750.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -400.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 80
text = "《李白的一生》"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -300.0
offset_top = 150.0
offset_right = 300.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 48
text = "剧本总结"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 240.0
offset_right = -50.0
offset_bottom = -120.0

[node name="ContentContainer" type="VBoxContainer" parent="Control/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -80.0
offset_right = -50.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "返回主菜单 (ESC)"

[node name="HintLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -80.0
offset_right = 250.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "按ESC键返回主菜单"
horizontal_alignment = 1

